--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       saepe labore ullam at. Consequuntur corporis voluptate reprehenderit iusto
       illum distinctio ea!
     </p>
+    <h2>VS Code is awesome!</h2>
     <img src="assets/images/logo.png" alt="code institute Logo" />
   </body>
 </html>
