--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
     </p>
     <h2>VS Code is awesome!</h2>
     <img src="assets/images/logo.png" alt="code institute Logo" />
+    <p>New text that I don't like</p>
+    <p class="text-center" >Using the VS Code Source Control Panel makes committing my code even faster!</p>
   </body>
 </html>
